// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webPath (integration) > should be able to shrink '//az' 1`] = `
""//az"
├> ""
├> "/az"
|  ├> ""
|  ├> "/"
|  |  └> ""
|  ├> "/z"
|  |  ├> ""
|  |  ├> "/"
|  |  |  └> ""
|  |  ├> "/a"
|  |  |  ├> ""
|  |  |  └> "/"
|  |  |     └> ""
|  |  ├> "/n"
|  |  |  ├> ""
|  |  |  ├> "/"
|  |  |  |  └> ""
|  |  |  ├> "/h"
|  |  |  |  ├> ""
|  |  |  |  ├> "/"
|  |  |  |  |  └> ""
|  |  |  |  ├> "/e"
|  |  |  |  |  ├> ""
|  |  |  |  |  ├> "/"
|  |  |  |  |  |  └> ""
|  |  |  |  |  ├> "/c"
|  |  |  |  |  |  ├> ""
|  |  |  |  |  |  ├> "/"
|  |  |  |  |  |  |  └> ""
|  |  |  |  |  |  └> "/b"
|  |  |  |  |  |     ├> ""
|  |  |  |  |  |     ├> "/"
|  |  |  |  |  |     |  └> ""
|  |  |  |  |  |     └> "/a"
|  |  |  |  |  |        ├> ""
|  |  |  |  |  |        └> "/"
|  |  |  |  |  |           └> ""
|  |  |  |  |  └> "/d"
|  |  |  |  |     ├> ""
|  |  |  |  |     ├> "/"
|  |  |  |  |     |  └> ""
|  |  |  |  |     └> "/c"
|  |  |  |  |        ├> ""
|  |  |  |  |        ├> "/"
|  |  |  |  |        |  └> ""
|  |  |  |  |        ├> "/a"
|  |  |  |  |        |  ├> ""
|  |  |  |  |        |  └> "/"
|  |  |  |  |        |     └> ""
|  |  |  |  |        └> "/b"
|  |  |  |  |           ├> ""
|  |  |  |  |           ├> "/"
|  |  |  |  |           |  └> ""
|  |  |  |  |           └> "/a"
|  |  |  |  |              ├> ""
|  |  |  |  |              └> "/"
|  |  |  |  |                 └> ""
|  |  |  |  └> "/g"
|  |  |  |     ├> ""
|  |  |  |     ├> "/"
|  |  |  |     |  └> ""
|  |  |  |     └> "/f"
|  |  |  |        ├> ""
|  |  |  |        ├> "/"
|  |  |  |        |  └> ""
|  |  |  |        └> "/e"
|  |  |  |           ├> ""
|  |  |  |           ├> "/"
|  |  |  |           |  └> ""
|  |  |  |           ├> "/a"
|  |  |  |           |  ├> ""
|  |  |  |           |  └> "/"
|  |  |  |           |     └> ""
|  |  |  |           ├> "/c"
|  |  |  |           |  ├> ""
|  |  |  |           |  ├> "/"
|  |  |  |           |  |  └> ""
|  |  |  |           |  └> "/b"
|  |  |  |           |     ├> ""
|  |  |  |           |     ├> "/"
|  |  |  |           |     |  └> ""
|  |  |  |           |     └> "/a"
|  |  |  |           |        ├> ""
|  |  |  |           |        └> "/"
|  |  |  |           |           └> ""
|  |  |  |           └> "/d"
|  |  |  |              ├> ""
|  |  |  |              ├> "/"
|  |  |  |              |  └> ""
|  |  |  |              └> "/c"
|  |  |  |                 ├> ""
|  |  |  |                 ├> "/"
|  |  |  |                 |  └> ""
|  |  |  |                 ├> "/a"
|  |  |  |                 |  ├> ""
|  |  |  |                 |  └> "/"
|  |  |  |                 |     └> ""
|  |  |  |                 └> "/b"
|  |  |  |                    ├> ""
|  |  |  |                    └> …
|  |  |  └> …
|  |  └> …
|  └> …
└> …"
`;

exports[`webPath (integration) > should be able to shrink '/a//z' 1`] = `
""/a//z"
├> ""
├> "//z"
|  ├> "/z"
|  |  ├> ""
|  |  ├> "/"
|  |  |  └> ""
|  |  ├> "/a"
|  |  |  ├> ""
|  |  |  └> "/"
|  |  |     └> ""
|  |  ├> "/n"
|  |  |  ├> ""
|  |  |  ├> "/"
|  |  |  |  └> ""
|  |  |  ├> "/h"
|  |  |  |  ├> ""
|  |  |  |  ├> "/"
|  |  |  |  |  └> ""
|  |  |  |  ├> "/e"
|  |  |  |  |  ├> ""
|  |  |  |  |  ├> "/"
|  |  |  |  |  |  └> ""
|  |  |  |  |  ├> "/c"
|  |  |  |  |  |  ├> ""
|  |  |  |  |  |  ├> "/"
|  |  |  |  |  |  |  └> ""
|  |  |  |  |  |  └> "/b"
|  |  |  |  |  |     ├> ""
|  |  |  |  |  |     ├> "/"
|  |  |  |  |  |     |  └> ""
|  |  |  |  |  |     └> "/a"
|  |  |  |  |  |        ├> ""
|  |  |  |  |  |        └> "/"
|  |  |  |  |  |           └> ""
|  |  |  |  |  └> "/d"
|  |  |  |  |     ├> ""
|  |  |  |  |     ├> "/"
|  |  |  |  |     |  └> ""
|  |  |  |  |     └> "/c"
|  |  |  |  |        ├> ""
|  |  |  |  |        ├> "/"
|  |  |  |  |        |  └> ""
|  |  |  |  |        ├> "/a"
|  |  |  |  |        |  ├> ""
|  |  |  |  |        |  └> "/"
|  |  |  |  |        |     └> ""
|  |  |  |  |        └> "/b"
|  |  |  |  |           ├> ""
|  |  |  |  |           ├> "/"
|  |  |  |  |           |  └> ""
|  |  |  |  |           └> "/a"
|  |  |  |  |              ├> ""
|  |  |  |  |              └> "/"
|  |  |  |  |                 └> ""
|  |  |  |  └> "/g"
|  |  |  |     ├> ""
|  |  |  |     ├> "/"
|  |  |  |     |  └> ""
|  |  |  |     └> "/f"
|  |  |  |        ├> ""
|  |  |  |        ├> "/"
|  |  |  |        |  └> ""
|  |  |  |        └> "/e"
|  |  |  |           ├> ""
|  |  |  |           ├> "/"
|  |  |  |           |  └> ""
|  |  |  |           ├> "/a"
|  |  |  |           |  ├> ""
|  |  |  |           |  └> "/"
|  |  |  |           |     └> ""
|  |  |  |           ├> "/c"
|  |  |  |           |  ├> ""
|  |  |  |           |  ├> "/"
|  |  |  |           |  |  └> ""
|  |  |  |           |  └> "/b"
|  |  |  |           |     ├> ""
|  |  |  |           |     ├> "/"
|  |  |  |           |     |  └> ""
|  |  |  |           |     └> "/a"
|  |  |  |           |        ├> ""
|  |  |  |           |        └> "/"
|  |  |  |           |           └> ""
|  |  |  |           └> "/d"
|  |  |  |              ├> ""
|  |  |  |              ├> "/"
|  |  |  |              |  └> ""
|  |  |  |              └> "/c"
|  |  |  |                 ├> ""
|  |  |  |                 ├> "/"
|  |  |  |                 |  └> ""
|  |  |  |                 ├> "/a"
|  |  |  |                 |  ├> ""
|  |  |  |                 |  └> "/"
|  |  |  |                 |     └> ""
|  |  |  |                 └> "/b"
|  |  |  |                    ├> ""
|  |  |  |                    ├> "/"
|  |  |  |                    |  └> ""
|  |  |  |                    └> "/a"
|  |  |  |                       └> …
|  |  |  └> …
|  |  └> …
|  └> …
└> …"
`;

exports[`webPath (integration) > should be able to shrink '/a/z' 1`] = `
""/a/z"
├> ""
├> "/z"
|  ├> ""
|  ├> "/"
|  |  └> ""
|  ├> "/a"
|  |  ├> ""
|  |  └> "/"
|  |     └> ""
|  ├> "/n"
|  |  ├> ""
|  |  ├> "/"
|  |  |  └> ""
|  |  ├> "/h"
|  |  |  ├> ""
|  |  |  ├> "/"
|  |  |  |  └> ""
|  |  |  ├> "/e"
|  |  |  |  ├> ""
|  |  |  |  ├> "/"
|  |  |  |  |  └> ""
|  |  |  |  ├> "/c"
|  |  |  |  |  ├> ""
|  |  |  |  |  ├> "/"
|  |  |  |  |  |  └> ""
|  |  |  |  |  └> "/b"
|  |  |  |  |     ├> ""
|  |  |  |  |     ├> "/"
|  |  |  |  |     |  └> ""
|  |  |  |  |     └> "/a"
|  |  |  |  |        ├> ""
|  |  |  |  |        └> "/"
|  |  |  |  |           └> ""
|  |  |  |  └> "/d"
|  |  |  |     ├> ""
|  |  |  |     ├> "/"
|  |  |  |     |  └> ""
|  |  |  |     └> "/c"
|  |  |  |        ├> ""
|  |  |  |        ├> "/"
|  |  |  |        |  └> ""
|  |  |  |        ├> "/a"
|  |  |  |        |  ├> ""
|  |  |  |        |  └> "/"
|  |  |  |        |     └> ""
|  |  |  |        └> "/b"
|  |  |  |           ├> ""
|  |  |  |           ├> "/"
|  |  |  |           |  └> ""
|  |  |  |           └> "/a"
|  |  |  |              ├> ""
|  |  |  |              └> "/"
|  |  |  |                 └> ""
|  |  |  └> "/g"
|  |  |     ├> ""
|  |  |     ├> "/"
|  |  |     |  └> ""
|  |  |     └> "/f"
|  |  |        ├> ""
|  |  |        ├> "/"
|  |  |        |  └> ""
|  |  |        └> "/e"
|  |  |           ├> ""
|  |  |           ├> "/"
|  |  |           |  └> ""
|  |  |           ├> "/a"
|  |  |           |  ├> ""
|  |  |           |  └> "/"
|  |  |           |     └> ""
|  |  |           ├> "/c"
|  |  |           |  ├> ""
|  |  |           |  ├> "/"
|  |  |           |  |  └> ""
|  |  |           |  └> "/b"
|  |  |           |     ├> ""
|  |  |           |     ├> "/"
|  |  |           |     |  └> ""
|  |  |           |     └> "/a"
|  |  |           |        ├> ""
|  |  |           |        └> "/"
|  |  |           |           └> ""
|  |  |           └> "/d"
|  |  |              ├> ""
|  |  |              ├> "/"
|  |  |              |  └> ""
|  |  |              └> "/c"
|  |  |                 ├> ""
|  |  |                 ├> "/"
|  |  |                 |  └> ""
|  |  |                 ├> "/a"
|  |  |                 |  ├> ""
|  |  |                 |  └> "/"
|  |  |                 |     └> ""
|  |  |                 └> "/b"
|  |  |                    ├> ""
|  |  |                    ├> "/"
|  |  |                    |  └> ""
|  |  |                    └> "/a"
|  |  |                       ├> ""
|  |  |                       └> …
|  |  └> …
|  └> …
└> …"
`;

exports[`webPath (integration) > should be able to shrink '/azerty' 1`] = `
""/azerty"
├> ""
├> "/"
|  └> ""
├> "/rty"
|  ├> ""
|  ├> "/ty"
|  |  ├> ""
|  |  ├> "/y"
|  |  |  ├> ""
|  |  |  ├> "/"
|  |  |  |  └> ""
|  |  |  ├> "/a"
|  |  |  |  ├> ""
|  |  |  |  └> "/"
|  |  |  |     └> ""
|  |  |  ├> "/m"
|  |  |  |  ├> ""
|  |  |  |  ├> "/"
|  |  |  |  |  └> ""
|  |  |  |  ├> "/g"
|  |  |  |  |  ├> ""
|  |  |  |  |  ├> "/"
|  |  |  |  |  |  └> ""
|  |  |  |  |  ├> "/d"
|  |  |  |  |  |  ├> ""
|  |  |  |  |  |  ├> "/"
|  |  |  |  |  |  |  └> ""
|  |  |  |  |  |  └> "/c"
|  |  |  |  |  |     ├> ""
|  |  |  |  |  |     ├> "/"
|  |  |  |  |  |     |  └> ""
|  |  |  |  |  |     └> "/b"
|  |  |  |  |  |        ├> ""
|  |  |  |  |  |        ├> "/"
|  |  |  |  |  |        |  └> ""
|  |  |  |  |  |        └> "/a"
|  |  |  |  |  |           ├> ""
|  |  |  |  |  |           └> "/"
|  |  |  |  |  |              └> ""
|  |  |  |  |  └> "/f"
|  |  |  |  |     ├> ""
|  |  |  |  |     ├> "/"
|  |  |  |  |     |  └> ""
|  |  |  |  |     └> "/e"
|  |  |  |  |        ├> ""
|  |  |  |  |        ├> "/"
|  |  |  |  |        |  └> ""
|  |  |  |  |        └> "/d"
|  |  |  |  |           ├> ""
|  |  |  |  |           ├> "/"
|  |  |  |  |           |  └> ""
|  |  |  |  |           ├> "/a"
|  |  |  |  |           |  ├> ""
|  |  |  |  |           |  └> "/"
|  |  |  |  |           |     └> ""
|  |  |  |  |           └> "/c"
|  |  |  |  |              ├> ""
|  |  |  |  |              ├> "/"
|  |  |  |  |              |  └> ""
|  |  |  |  |              └> "/b"
|  |  |  |  |                 ├> ""
|  |  |  |  |                 ├> "/"
|  |  |  |  |                 |  └> ""
|  |  |  |  |                 └> "/a"
|  |  |  |  |                    ├> ""
|  |  |  |  |                    └> "/"
|  |  |  |  |                       └> ""
|  |  |  |  ├> "/j"
|  |  |  |  |  ├> ""
|  |  |  |  |  ├> "/"
|  |  |  |  |  |  └> ""
|  |  |  |  |  └> "/i"
|  |  |  |  |     ├> ""
|  |  |  |  |     ├> "/"
|  |  |  |  |     |  └> ""
|  |  |  |  |     └> "/h"
|  |  |  |  |        ├> ""
|  |  |  |  |        ├> "/"
|  |  |  |  |        |  └> ""
|  |  |  |  |        └> "/g"
|  |  |  |  |           ├> ""
|  |  |  |  |           ├> "/"
|  |  |  |  |           |  └> ""
|  |  |  |  |           ├> "/a"
|  |  |  |  |           |  ├> ""
|  |  |  |  |           |  └> "/"
|  |  |  |  |           |     └> ""
|  |  |  |  |           ├> "/d"
|  |  |  |  |           |  ├> ""
|  |  |  |  |           |  ├> "/"
|  |  |  |  |           |  |  └> ""
|  |  |  |  |           |  └> "/c"
|  |  |  |  |           |     ├> ""
|  |  |  |  |           |     ├> "/"
|  |  |  |  |           |     |  └> ""
|  |  |  |  |           |     └> "/b"
|  |  |  |  |           |        ├> ""
|  |  |  |  |           |        ├> "/"
|  |  |  |  |           |        |  └> ""
|  |  |  |  |           |        └> …
|  |  |  |  |           └> …
|  |  |  |  └> …
|  |  |  └> …
|  |  └> …
|  └> …
└> …"
`;
